# jack1

./: .gitignore  AUTHORS  configure.ac
codeBlocks/: jack1.cbp  jack1.layout
drivers/: Makefile.am
drivers/iio/: JackIIODriverTest.C  Makefile.am  iio_driver.C  iio_driver.h  iio_driver_dummy.C  iio_driver_dummy.c  unified_jack_time.h
include/: internal.h  port.h  shm.h
jackd/: clientengine.c
libjack/: client.c  port.c
